# try_boost_filesystem

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
packer/: Packer.h
path_worker/: path_worker.cpp  path_worker.h
resources/p1/: 1.txt  2.txt
resources/p2/: 1.txt  3.txt
resources/p3/: 1.txt  2.txt  3.txt
src/: main.cpp
